--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "medium-blog",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress -p",
     "watch": "webpack --progress --watch",
-    "start": "webpack-dev-server"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.6.1",
     "esri-leaflet": "^2.2.2",
     "esri-leaflet-geocoder": "^2.2.13",
-    "leaflet": "^1.3.3",
-    "moment": "^2.22.2"
+    "express": "^4.16.3",
+    "leaflet": "^1.3.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
