--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
+    "dotenv-webpack": "^1.5.7",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-command": "^0.4.1",
