--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "esri-leaflet": "^2.2.2",
     "esri-leaflet-geocoder": "^2.2.13",
     "express": "^4.16.3",
-    "leaflet": "^1.3.3"
+    "leaflet": "^1.3.3",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
