--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "dotenv-webpack": "^1.5.7",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "jshint": "^2.9.6",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-command": "^0.4.1",
