--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "esri-leaflet-geocoder": "^2.2.13",
     "express": "^4.16.3",
     "leaflet": "^1.3.3",
+    "leaflet.locatecontrol": "^0.62.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21"
   },
