updated app id and code

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "ejs": "^2.6.1",
     "esri-leaflet": "^2.2.2",
     "esri-leaflet-geocoder": "^2.2.13",
