--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "ejs": "^2.6.1",
     "esri-leaflet": "^2.2.2",
     "esri-leaflet-geocoder": "^2.2.13",
-    "express": "^4.16.3",
+    "express": "^4.18.2",
+    "heroku": "^7.67.1",
     "leaflet": "^1.3.3",
     "leaflet.locatecontrol": "^0.62.0",
-    "moment": "^2.22.2",
-    "moment-timezone": "^0.5.21"
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.40"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -33,10 +34,10 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^4.0.0",
-    "jshint": "^2.9.6",
+    "jshint": "^2.13.6",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
-    "webpack-command": "^0.4.1",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-command": "^0.5.1",
+    "webpack-dev-server": "^3.11.3"
   }
 }
